2007-07-30  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome.manifest: Add flickrdemo.xul as an overlay to
	start.xul.

	* compzilla/chrome/content/flickrdemo.js: Add load handler to
	create flickrDemo window: can't access XUL overlay-added DOM
	elements without this.

	* compzilla/chrome/skin/compzilla.css: Remove flickdemo stuff,
	moved to new flickrdemo.css.

	* compzilla/chrome/content/start.xul: Remove flickdemo stuff,
	moved to new flickrdemo.xul.

2007-07-27  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/start.xul: move the loading of debug.js
	to the front of the list (just below jquery) so it should catch
	all syntax/etc errors from .js files loaded further down.

	* compzilla/chrome/content/start.js (compzillaLoad): call
	initDebugWindow here.

	* compzilla/chrome/content/debug.js: put the frame creation stuff
	in initDebugWindow, so we can move debug.js near the front of the
	loaded .js files in start.xul.  This is so we can install the
	window.onerror handler in this file which redirects js errors to
	our debug window.

2007-07-25  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/install.rdf: Undo the last changes, but now
	understanding more:

	We actually need to match an exact number for minVersion,
	so use 2.0.0.1.  Edgy's "2.0" doesn't seem to work, so require at
	least a point release after that.

	Also, there's not going to be an SSL cert for pyrodesktop.org any
	time soon, so just comment out the updateURL again.  We'll use
	addons.mozilla.org hosting, which let's auto-updating work without
	an updateURL anyway.

2007-07-25  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindow.cpp (RemoveContentNode): Don't
	generate errors here, always return NS_OK.  This is what other moz
	observers seem to do.
	(AddObserver): Ditto.

	* compzilla/src/compzillaControl.cpp (AddObserver): Enumerate all
	existing windows and call CreateWindow for each on the observer.