@@ -66,7 +66,7 @@
 #flickrParent {
 	position: absolute;
 	left: 0px;
-	top: 1em;
+	top: 2em;
 	right: 0px;
 	bottom: 1em;
 	overflow: auto;
