@@ -1,3 +1,8 @@
+2007-07-31  Alex Graveley  <alex@beatniksoftware.com>
+
+	Include <nsIDOMClassInfo.h> everywhere so we build with latest
+	Minefield sources.
+
 2007-07-30  Alex Graveley  <alex@beatniksoftware.com>
 
 	* compzilla/chrome.manifest: Add flickrdemo.xul as an overlay to
